k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securedevops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securedevops
  template:
    metadata:
      labels:
        app: securedevops
    spec:
      containers:
      - name: app
        image: securedevops-app:latest   # built locally
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "⏳ Waiting for MySQL...";
            until nc -z mysql 3306; do
              sleep 2
            done;
            echo "✅ MySQL is up, starting Flask...";
            python app.py
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securedevops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securedevops
  template:
    metadata:
      labels:
        app: securedevops
    spec:
      containers:
      - name: app
        image: securedevops-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
